k8sprjs/monitoring.old/components/ui-grafana/resources/ui-grafana.service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ui-grafana
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '3000'
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 3000
    protocol: TCP
    name: http
