k8sprjs/monitoring.old/components/ui-grafana/resources/ui-grafana.ingressroute.traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: ui-grafana
spec:
  entryPoints:
    - websecure
  tls:
    secretName: wildcard.deimos.cloud-tls
  routes:
  - match: Host(`grafana.deimos.cloud`) || Host(`gfn.deimos.cloud`)
    kind: Rule
    services:
    - name: mntr-ui-grafana
      kind: Service
      port: 443
      scheme: http
